style: Improved responsive SCSS styling and fixed member target truncation issue

--- a/frontend/src/styles/_base.scss
+++ b/frontend/src/styles/_base.scss
@@ -74,6 +74,7 @@ a {
 
     > div {
       padding: 24px;
+      width: 100%;
     }
   }
 
