--- a/frontend/src/styles/_pages.scss
+++ b/frontend/src/styles/_pages.scss
@@ -128,6 +128,21 @@ table {
     padding: 16px;
   }
 
+  .info-summary {
+    margin-bottom: 8px;
+  }
+
+  .info-container {
+    margin: 16px 0;
+    .info-item {
+      padding: 6px 0;
+
+      .info-label {
+        width: 80px;
+      }
+    }
+  }
+
   table {
     tr {
       border: 1px solid v.$border-color;
@@ -138,10 +153,9 @@ table {
 
     td {
       padding: 12px 16px;
-      text-align: right;
       position: relative;
       border: none;
-      border-bottom: 1px solid #f2f4f6;
+      border-bottom: 1px solid v.$border-color;
 
       &::before {
         content: attr(data-label);
@@ -151,6 +165,12 @@ table {
         color: v.$text-primary;
       }
     }
+  }
+
+  .table-scroll-wrapper {
+    width: 100%;
+    overflow-x: auto;
+    -webkit-overflow-scrolling: touch;
   }
 
   .search-form {
